added different temperatures

--- a/index.html
+++ b/index.html
@@ -53,6 +53,59 @@
 
                 </div>
             </div>
+            <div class="day-clearfix">
+                <div class="day-block">
+                    <div class="day-block-date">Sun 12:00</div>
+                    <img class="day__block-image" src="http://openweathermap.org/img/w/10d.png">
+                    <div class="day__block-temps">
+                        <span class="day__block-temp">17</span>
+                    </div>
+                </div>
+                <div class="day-block">
+                    <div class="day-block-date">Mon 12:00</div>
+                    <img class="day__block-image" src="http://openweathermap.org/img/w/10d.png">
+                    <div class="day__block-temps">
+                        <span class="day__block-temp">10</span>
+                    </div>
+                </div>
+                <div class="day-block">
+                    <div class="day-block-date">Tue 12:00</div>
+                    <img class="day__block-image" src="http://openweathermap.org/img/w/10d.png">
+                    <div class="day__block-temps">
+                        <span class="day__block-temp">12</span>
+                    </div>
+                </div>
+                <div class="day-block">
+                    <div class="day-block-date">Wed 12:00</div>
+                    <img class="day__block-image" src="http://openweathermap.org/img/w/10d.png">
+                    <div class="day__block-temps">
+                        <span class="day__block-temp">17</span>
+                    </div>
+                </div>
+                <div class="day-block">
+                    <div class="day-block-date">Thurd 12:00</div>
+                    <img class="day__block-image" src="http://openweathermap.org/img/w/10d.png">
+                    <div class="day__block-temps">
+                        <span class="day__block-temp">19</span>
+                    </div>
+                </div>
+                <div class="day-block">
+                    <div class="day-block-date">Fri 12:00</div>
+                    <img class="day__block-image" src="http://openweathermap.org/img/w/10d.png">
+                    <div class="day__block-temps">
+                        <span class="day__block-temp">7</span>
+                    </div>
+                </div>
+                <div class="day-block">
+                    <div class="day-block-date">Sat 12:00</div>
+                    <img class="day__block-image" src="http://openweathermap.org/img/w/10d.png">
+                    <div class="day__block-temps">
+                        <span class="day__block-temp">10</span>
+                    </div>
+                </div>
+
+
+            </div>
         </div>
     </div>
 </body>
